Modernize Paper 26.2 and Lands API integration (#2)